prevent accidental page refresh on mobile

--- a/client/src/components/PixelGrid/PixelGrid.scss
+++ b/client/src/components/PixelGrid/PixelGrid.scss
@@ -1,5 +1,10 @@
 $max-grid-size: 800px;
 
+body {
+  // prevent drag down refreshing pages when the grid is present
+  overscroll-behavior: contain;
+}
+
 .pixel-grid {
   display: flex;
   white-space: nowrap;
